--- a/examples/notion-github-sync/package.json
+++ b/examples/notion-github-sync/package.json
@@ -4,7 +4,7 @@
   "description": "Sync GitHub issues with Notion.",
   "main": "index.js",
   "engines": {
-    "node": "12.x"
+    "node": ">12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
